updated search function and swagger api doc
